Add gallery section with image to index.html
Added a section for the gallery with an image.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mkgrill - Churrasco Profissional</title>
+  <title>Mkgrill - Churrasco Profissional</title
+    <section id="galeria"> 
+      <div class="galeria">
+  <img src="churrasco_1.jpg" alt="Foto de churrasco 1">
+   </div>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
